kubernates/k8s/services.yaml
kind: Service
apiVersion: v1
metadata:
  name:  backend-service
spec:
  selector:
    app:  backend
  type:  ClusterIP
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  3000
